# Calender_Skout

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dependency.txt  docker-compose.yml  memo.txt  pyproject.toml  study.md
app/: __init__.py  main.py
app/api/: auth.py  events.py  health.py  settings.py
app/core/: config.py  security.py  time.py
app/db/: seed.py  session.py
app/integrations/: outlook.py
app/models/: __init__.py  calendar_source.py  event_note.py  external_event.py  saved_event.py  scan_criteria.py  scan_run.py  slack_settings.py
app/schemas/: auth.py  events.py  settings.py
app/services/: __init__.py  calendar_export.py  calendar_ingestion.py  dedupe.py  public_scan.py  relevance.py  saved_events.py  slack.py
app/tasks/: scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AgendaList.tsx  AppShell.tsx  CalendarLegend.tsx  CreateEventForm.tsx  DiscoverPanel.tsx  EventDrawer.tsx  MonthCalendar.tsx  PasswordGate.tsx  StatusCard.tsx  ViewSwitcher.tsx  WeekAgenda.tsx
frontend/src/lib/: api.ts  calendar.ts  types.ts
frontend/src/pages/: CalendarPage.tsx  SavedPage.tsx  SettingsPage.tsx  SourcesPage.tsx
frontend/src/styles/: app.css
tests/: test_add_scanned_event.py  test_auth.py  test_calendar_export.py  test_create_event_api.py  test_dedupe.py  test_delete_event_api.py  test_public_scan.py  test_relevance.py  test_saved_event_delete_api.py  test_saved_event_workflow.py  test_slack.py  test_source_delete_api.py  test_source_upload.py
